iptables-rules.v6
# Generated by ip6tables-save v1.6.0 on Sat Aug 11 00:18:25 2018
*nat
:PREROUTING ACCEPT [1223:105935]
:INPUT ACCEPT [58:5508]
:OUTPUT ACCEPT [245:22361]
:POSTROUTING ACCEPT [245:22361]
-A POSTROUTING -s <your-vpn-client-ipv6-prefix> -m policy --dir out --pol none -j MASQUERADE
COMMIT
# Completed on Sat Aug 11 00:18:25 2018
# Generated by ip6tables-save v1.6.0 on Sat Aug 11 00:18:25 2018
*filter
:INPUT ACCEPT [38068:18169407]
:FORWARD ACCEPT [52982:45835118]
:OUTPUT ACCEPT [32673:45292949]
:ufw6-after-forward - [0:0]
:ufw6-after-input - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-output - [0:0]
:ufw6-before-forward - [0:0]
:ufw6-before-input - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-output - [0:0]
:ufw6-reject-forward - [0:0]
:ufw6-reject-input - [0:0]
:ufw6-reject-output - [0:0]
:ufw6-track-forward - [0:0]
:ufw6-track-input - [0:0]
:ufw6-track-output - [0:0]
-A INPUT -j ufw6-before-logging-input
-A INPUT -j ufw6-before-input
-A INPUT -j ufw6-after-input
-A INPUT -j ufw6-after-logging-input
-A INPUT -j ufw6-reject-input
-A INPUT -j ufw6-track-input
-A FORWARD -j ufw6-before-logging-forward
-A FORWARD -j ufw6-before-forward
-A FORWARD -j ufw6-after-forward
-A FORWARD -j ufw6-after-logging-forward
-A FORWARD -j ufw6-reject-forward
-A FORWARD -j ufw6-track-forward
-A OUTPUT -j ufw6-before-logging-output
-A OUTPUT -j ufw6-before-output
-A OUTPUT -j ufw6-after-output
-A OUTPUT -j ufw6-after-logging-output
-A OUTPUT -j ufw6-reject-output
-A OUTPUT -j ufw6-track-output
COMMIT
# Completed on Sat Aug 11 00:18:25 2018
